// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> Default story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-:r1:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary menu__button"
    data-headlessui-state="open"
    id="headlessui-menu-button-:r0:"
    type="button"
  >
    Documentation Links
    <svg
      aria-hidden="true"
      class="icon menu__button--with-chevron"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Menu /> WithCustomButton story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-:rj:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="menu__plain-button"
    data-headlessui-state="open"
    id="headlessui-menu-button-:ri:"
    type="button"
  >
    <div
      class="fpo"
    >
      Menu Button
    </div>
  </button>
</div>
`;

exports[`<Menu /> WithLongButtonText story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-:r7:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary menu__button"
    data-headlessui-state="open"
    id="headlessui-menu-button-:r6:"
    type="button"
  >
    Long Trigger Button Text to Demonstrate Popover Matching
    <svg
      aria-hidden="true"
      class="icon menu__button--with-chevron"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Menu /> WithShortButtonText story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-:rd:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary menu__button"
    data-headlessui-state="open"
    id="headlessui-menu-button-:rc:"
    type="button"
  >
    Menu
    <svg
      aria-hidden="true"
      class="icon menu__button--with-chevron"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;
